# shares1

./: .gitignore  README.md  pyproject.toml  run_all.py
Input Data/: CashTransactionSummary.csv  Confirmation.csv  betashares-transactions.csv  orderhistory.csv
configs/: config.example.yml  config.yml
data/: CashTransactionSummary.csv  Confirmation.csv  orderhistory.csv
data/processed/: prices.parquet  transactions_normalized.csv
data/processed/price_cache/: prices_ACDC.AX.parquet  prices_ADA-AUD.parquet  prices_BTC-AUD.parquet  prices_CRYP.AX.parquet  prices_ETH-AUD.parquet  prices_HACK.AX.parquet  prices_HBRD.AX.parquet  prices_IVV.AX.parquet  prices_NDQ.AX.parquet  prices_NEO-AUD.parquet  prices_PMGOLD.AX.parquet  prices_URNM.AX.parquet  prices_VAS.AX.parquet  prices_VEU.AX.parquet  prices_VGE.AX.parquet  prices_XMET.AX.parquet  prices_XRP-AUD.parquet  prices__AXJO.parquet
outputs/reports/: au_cgt_fifo.csv  performance_summary.csv
src/sharetracker/: cli.py  config.py
src/sharetracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sharetracker/analytics/: benchmark.py  performance.py
src/sharetracker/io/: betashares_transactions.py  cleaners.py  cmc_cash_summary.py  cmc_confirmation.py  coinspot_orderhistory.py  normalize.py
src/sharetracker/portfolio/: ledger.py  models.py
src/sharetracker/pricing/: coinspot.py  yahoo.py
src/sharetracker/reporting/: tax_au.py
src/sharetracker/viz/: charts.py
