[project]
name = "sharetracker"
version = "0.1.0"
description = "Portfolio tracker (ASX + crypto) with Yahoo Finance pricing, benchmark analytics, and AU FIFO CGT reporting."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.1",
  "numpy>=1.26",
  "yfinance>=0.2.40",
  "python-dateutil>=2.9",
  "pyyaml>=6.0",
  "typer>=0.12",
  "rich>=13.7",
  "plotly>=5.22",
  "kaleido>=0.2.1"
]

[project.scripts]
sharetracker = "sharetracker.cli:app"

[tool.ruff]
line-length = 100
